fixed nav wrapper background positioning on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -875,7 +875,7 @@ p:not(:last-child) {
   opacity: 0;
   display: none;
   background-image: url("../../img/waves.png");
-  background-size: 35%;
+  background-size: 100%;
   background-repeat: repeat-x;
   background-position: bottom;
 }
