--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -30,7 +30,7 @@
     opacity: 0;
     display: none;
     background-image: url("../../img/waves.png");
-    background-size: 35%;
+    background-size: 100%;
     background-repeat: repeat-x;
     background-position: bottom;
 
